--- a/Notes/游戏开发/《游戏引擎架构》笔记.md
+++ b/Notes/游戏开发/《游戏引擎架构》笔记.md
@@ -211,6 +211,14 @@
 - 提供为某些版本加上标签的机制，供以后提取已加标签的版本
 - 容许代码从主生产线上建立分支（branch）
 
+#### Visual Studio
+##### 调试发布生成的窍门
+- **学习在调试器中阅读及单步执行反汇编**
+- **运用寄存器去推理变量的值或地址**
+- **使用地址去检查变量及对象内容**
+- **利用静态和全局变量**
+- **修改代码**
+
 #### 剖析工具
 **剖析器（profiler）** 能量度代码的执行时间，并能告之每个函数所花的时间
 
