--- a/Notes/游戏开发/《游戏引擎架构》笔记.md
+++ b/Notes/游戏开发/《游戏引擎架构》笔记.md
@@ -1,7 +1,7 @@
 # 《游戏引擎架构》笔记
 ## 第一部分 基础
 ### 第一章 导论
-#### 典型游戏团队的结构
+#### 1.1 典型游戏团队的结构
 1. 工程师（engineer）
     
     - **运行时**程序员（runtime programmer）
@@ -27,7 +27,7 @@
 
 6. 发行商（publisher）及工作室
 
-#### 不同的游戏类型
+#### 1.2 不同的游戏类型
 - 第一人称射击（first person shooting，FPS）
 
 - 平台（platformer）及其他第三人称游戏（third person game）
@@ -56,7 +56,7 @@
 
 - 其他游戏类型
 
-#### 运行时引擎架构
+#### 1.3 运行时引擎架构
 1. 目标硬件
 
     代表用来执行游戏的计算机系统或游戏主机
@@ -153,7 +153,7 @@
 
 16. 个别游戏专用子系统
 
-#### 工具及资产管道
+#### 1.4 工具及资产管道
 1. 数字内容创作工具
     
     游戏本质上是多媒体应用。游戏引擎的输入数据形式广泛，例如三维网格数据、纹理位图、动画数据、音频文件等。所有源数据皆由美术人员使用 **数字内容创作（digital content creation，DCC）** 应用软件制作
@@ -198,7 +198,7 @@
 
 
 ### 第二章 专业工具
-#### 版本控制
+#### 2.1 版本控制
 **版本控制系统（version control system）** 容许多位开发者在同一组文件上工作
 
 版本控制系统容许多位用户同时修改文件，甚至修改同一个文件，并避免互相破坏成果。因为版本控制系统主要供程序员管理源代码，所以有时候又称为 **源代码控制（source control）**
@@ -211,7 +211,7 @@
 - 提供为某些版本加上标签的机制，供以后提取已加标签的版本
 - 容许代码从主生产线上建立分支（branch）
 
-#### Visual Studio
+#### 2.2 Visual Studio
 ##### 调试发布生成的窍门
 - **学习在调试器中阅读及单步执行反汇编**
 - **运用寄存器去推理变量的值或地址**
@@ -219,7 +219,7 @@
 - **利用静态和全局变量**
 - **修改代码**
 
-#### 剖析工具
+#### 2.3 剖析工具
 **剖析器（profiler）** 能量度代码的执行时间，并能告之每个函数所花的时间
 
 剖析器大致可分为两类：
@@ -228,7 +228,7 @@
 
 - **测控式剖析器（instrumental profiler）**：此类剖析器能提供最精确、最详尽的计时数据，但是却要以不能实时运行程序为代价——当启动剖析器后，目标程序慢如蜗牛
 
-#### 内存泄露和损坏检测
+#### 2.4 内存泄露和损坏检测
 使用此类工具可以帮助程序员检测内存泄漏和损坏，避免错误的发生
 
 ##### 内存泄漏（memory leak）
@@ -237,9 +237,25 @@
 ##### 内存损坏（memory corruption）
 程序不慎把数据写进内存的错误位置，覆盖了该位置原来的重要数据，也同时未能把数据写到**应该**写的位置。
 
-#### 其他工具
+#### 2.5 其他工具
 - **区别工具（difference/diff tool）**：区别工具是用来比较一个文本文档的两个版本，找出版本之间的差异
 
 - **三路合并工具（three-way merge tool）**：当两个人修改同一个文件时，就会产生两组区别。能把两组区别合并成为含两人改动的最终文件的工具，称为三路合并工具
 
 - **十六进制编辑器（hex editor）**：十六进制编辑器用于查看及修改二进制文件的内容
+
+### 第三章 游戏软件工程基础
+#### 3.1 重温C++及最佳实践
+##### 基本概念
+- **类（class）** 是属性（数据）和行为（代码）的集合，共同组成既有用又有意义的整体。类可视为 **规格（specification）**，这些规格描述类的个别 **实例（instance）**——又称为 **对象（object）**。
+
+- **封装（encapsulation）** 是指，对象向外只提供有限接口，隐藏对象的内部状态和实现细节。
+
+- **继承（inheritance）** 能借着**延伸**现有的类去定义新的类。新类可修改或延伸现有类的数据、接口和行为。
+
+- **多重继承（multiple inheritance, MI）** 是指一个类有一个以上的父类。
+
+- **多态（polymorphism）** 是一种语言特征，容许采用单一**共同接口**操作一组不同类型的对象。
+
+- **合成（composition）** 是指，使用**一组互动的**对象去完成高阶任务。
+
