--- a/Notes/游戏开发/《游戏引擎架构》笔记.md
+++ b/Notes/游戏开发/《游戏引擎架构》笔记.md
@@ -245,7 +245,7 @@
 - **十六进制编辑器（hex editor）**：十六进制编辑器用于查看及修改二进制文件的内容
 
 ### 第三章 游戏软件工程基础
-#### 3.1 重温C++及最佳实践
+#### 3.1 重温 C++ 及最佳实践
 ##### 基本概念
 - **类（class）** 是属性（数据）和行为（代码）的集合，共同组成既有用又有意义的整体。类可视为 **规格（specification）**，这些规格描述类的个别 **实例（instance）**——又称为 **对象（object）**。
 
@@ -259,3 +259,23 @@
 
 - **合成（composition）** 是指，使用**一组互动的**对象去完成高阶任务。
 
+##### 编码标准
+1. 编码标准存在的原因：
+
+    1. 一些标准使代码更易读、更易理解、更易维护。
+
+    2. 另一些约定能预防程序员做蠢事，自找麻烦。
+
+2. 编码标准内容：
+
+    - **接口为王**：保持接口（`.h`文件）整洁、简单、极小、易于理解，并有良好注释。
+
+    - **好名字促进理解及避免混淆**：持续使用能直接反映类、函数、变量用途的直观名字。
+    
+    - **不要给命名空间添乱**：使用 C++ 命名空间或统一的名字前缀，以确保自己的符号（symbol）不会和其他库的符号冲突。
+
+    - **遵从最好的 C++ 实践**
+
+    - **始终如一**：始终遵守编码标准内容。
+
+    - **显露错误**：所谓最“整洁”的代码，并不需要是表面看起来简洁整齐的代码，而更重要的是，代码的编写方法能**容易显露**常见的编程错误。
