--- a/Notes/游戏开发/《游戏引擎架构》笔记.md
+++ b/Notes/游戏开发/《游戏引擎架构》笔记.md
@@ -231,11 +231,13 @@
 #### 2.4 内存泄露和损坏检测
 使用此类工具可以帮助程序员检测内存泄漏和损坏，避免错误的发生
 
-##### 内存泄漏（memory leak）
-如果一块内存在分配后永不释放，就会产生内存泄漏。
+- **内存泄漏（memory leak）**
+    
+    如果一块内存在分配后永不释放，就会产生内存泄漏。
 
-##### 内存损坏（memory corruption）
-程序不慎把数据写进内存的错误位置，覆盖了该位置原来的重要数据，也同时未能把数据写到**应该**写的位置。
+- 内存损坏（memory corruption）
+
+    程序不慎把数据写进内存的错误位置，覆盖了该位置原来的重要数据，也同时未能把数据写到**应该**写的位置。
 
 #### 2.5 其他工具
 - **区别工具（difference/diff tool）**：区别工具是用来比较一个文本文档的两个版本，找出版本之间的差异
