--- a/Notes/游戏开发/《游戏引擎架构》笔记.md
+++ b/Notes/游戏开发/《游戏引擎架构》笔记.md
@@ -235,7 +235,7 @@
     
     如果一块内存在分配后永不释放，就会产生内存泄漏。
 
-- 内存损坏（memory corruption）
+- **内存损坏（memory corruption）**
 
     程序不慎把数据写进内存的错误位置，覆盖了该位置原来的重要数据，也同时未能把数据写到**应该**写的位置。
 
@@ -281,3 +281,18 @@
     - **始终如一**：始终遵守编码标准内容。
 
     - **显露错误**：所谓最“整洁”的代码，并不需要是表面看起来简洁整齐的代码，而更重要的是，代码的编写方法能**容易显露**常见的编程错误。
+
+#### C/C++ 的数据、代码及内存
+- 大于8位（1字节）的值称为 **多字节量（multi-byte quantity）**。
+
+- 内存中存储多字节整数有两种方式：
+
+    - **小端（little-endian）**：若微处理器存储多字节值的最低有效字节于较低的内存位置，则该微处理器就是**小端**处理器。
+
+    - **大端（big-endian）**：若微处理器存储多字节值的最高有效字节于较低的内存位置，则该微处理器就是**大端**处理器。
+
+- 处理字节序问题的方法：
+
+    1. 所有数据以文字方式写入文件。多字节数值以一串十进制数字，每数字一个字节写入。但此方法会浪费磁盘空间。
+
+    2. 工具先转换数据字节序，然后再把转换后的数据写进二进制文件。
