--- a/Notes/游戏开发/《游戏引擎架构》笔记.md
+++ b/Notes/游戏开发/《游戏引擎架构》笔记.md
@@ -296,3 +296,9 @@
     1. 所有数据以文字方式写入文件。多字节数值以一串十进制数字，每数字一个字节写入。但此方法会浪费磁盘空间。
 
     2. 工具先转换数据字节序，然后再把转换后的数据写进二进制文件。
+    
+- 声明与定义：
+
+    - **声明（declaration）** 是数据对象或函数的描述。声明使编译器知道实体（数据对象或函数）的名字，以及其数据类型或函数签名（function signature，即函数的返回值类型、一个至多个参数类型）。
+
+    - **定义（definition）** 则是程序中个别内存区域的描述。此内存区域可能用来放置变量、struct或class的实例，以及函数的机器码。
