--- a/Notes/游戏开发/《游戏引擎架构》笔记.md
+++ b/Notes/游戏开发/《游戏引擎架构》笔记.md
@@ -302,3 +302,26 @@
     - **声明（declaration）** 是数据对象或函数的描述。声明使编译器知道实体（数据对象或函数）的名字，以及其数据类型或函数签名（function signature，即函数的返回值类型、一个至多个参数类型）。
 
     - **定义（definition）** 则是程序中个别内存区域的描述。此内存区域可能用来放置变量、struct或class的实例，以及函数的机器码。
+
+- **可执行映像**一般最少由以下4个段组成：
+
+    1. **代码段（text/code segment）** ：此段包含程序中定义的全部函数的可执行机器码。
+    
+    2. **数据段（data segment）** ：此段包含全部**获初始化**的全局及静态变量。链接器为这些变量分配所需内存，其内存布局将会和程序执行时完全一样，并且链接器会填入适当的初始值。
+    
+    3. **BSS段（BSS segment）** ：“BSS”是过时的名字，原意是“由符号开始的块（block started by symbol）”。BSS段包含程序中定义的所有**未初始化**全局变量和静态变量。
+
+    4. **只读数据段（read only data segment）** ：此段又称为**rodata**段，包含程序中定义的只读（常量）全局变量。
+
+- 程序堆栈：
+
+    当可执行程序被载入内存时，操作系统会保留一块称为 **程序堆栈（program stack）** 的内存。当调用函数时，一块连续的内存就会压入栈，此内存块称为 **堆栈帧（stack frame）**。若函数`a()`调用函数`b()`，函数`b()`的新堆栈帧就会压入`a()`堆栈帧之上。当`b()`返回时，其堆栈帧就会弹出，并于调用`b()`之后的位置继续执行`a()`。
+    
+    堆栈帧存储3类数据：
+    
+        1. 堆栈帧存储调用函数的 **返回地址（return address）**。当函数返回时，就可以凭这一数据继续执行调用方的函数。
+        
+        2. 堆栈帧保存相关**CPU寄存器**的内容。当函数返回时，各寄存器就会还原至调用方可继续执行的状态。
+        
+        3. 堆栈帧也包含函数里的所有 **局部变量（local variable）**，或称为 **自动变量（automatic variable）**。
+
