--- a/Notes/游戏开发/《游戏引擎架构》笔记.md
+++ b/Notes/游戏开发/《游戏引擎架构》笔记.md
@@ -282,7 +282,7 @@
 
     - **显露错误**：所谓最“整洁”的代码，并不需要是表面看起来简洁整齐的代码，而更重要的是，代码的编写方法能**容易显露**常见的编程错误。
 
-#### C/C++ 的数据、代码及内存
+#### 3.2 C/C++ 的数据、代码及内存
 - 大于8位（1字节）的值称为 **多字节量（multi-byte quantity）**。
 
 - 内存中存储多字节整数有两种方式：
@@ -319,9 +319,18 @@
     
     堆栈帧存储3类数据：
     
-        1. 堆栈帧存储调用函数的 **返回地址（return address）**。当函数返回时，就可以凭这一数据继续执行调用方的函数。
+    1. 堆栈帧存储调用函数的 **返回地址（return address）**。当函数返回时，就可以凭这一数据继续执行调用方的函数。
         
-        2. 堆栈帧保存相关**CPU寄存器**的内容。当函数返回时，各寄存器就会还原至调用方可继续执行的状态。
+    2. 堆栈帧保存相关**CPU寄存器**的内容。当函数返回时，各寄存器就会还原至调用方可继续执行的状态。
         
-        3. 堆栈帧也包含函数里的所有 **局部变量（local variable）**，或称为 **自动变量（automatic variable）**。
+    3. 堆栈帧也包含函数里的所有 **局部变量（local variable）**，或称为 **自动变量（automatic variable）**。
+
+- `static`关键字的不同含义
+
+    - 当用于文件作用域时，`static`意味着“限制变量或函数的可见性，只有本`.cpp`文件才能使用该变量或函数”。
+    
+    - 当用于函数作用域时，`static`意味着“变量为全局，非自动，只在本函数内可见”。
+    
+    - 当用于`struct`或`class`声明时，`static`意味着“该变量非一般成员变量，而是类似于全局变量”。
+    
 
