--- a/Notes/游戏开发/《游戏引擎架构》笔记.md
+++ b/Notes/游戏开发/《游戏引擎架构》笔记.md
@@ -339,3 +339,11 @@
 - **程序员错误（programmer error）** ：指由代码本身的bug所导致的错误。
 
 - 正确地使用**断言**极为重要。断言只应用于捕捉程序本身的bug，永远**不要**用来捕捉用户错误。
+
+### 第四章 游戏所需的三维数学
+#### 4.1 坐标系
+- **笛卡尔坐标系（Cartesian coordinate system）** ：使用 2 个或 3 个互相垂直的轴，来描述二维或三维空间的位置。
+
+- **圆柱坐标系（cylindrical coordinate system）** ：此坐标系由 3 部分组成，分别是垂直“高度”轴 h、从垂直轴发射出来的辐射轴 r、和 yaw 角度 θ。
+
+- **球坐标系（spherical coordinate system）** ：此坐标系由 3 部分组成，分别是俯仰角（pitch）phi（φ）、偏航角（yaw）theta（θ）和半径长度 r。
