--- a/Notes/游戏开发/《游戏引擎架构》笔记.md
+++ b/Notes/游戏开发/《游戏引擎架构》笔记.md
@@ -282,7 +282,7 @@
 
     - **显露错误**：所谓最“整洁”的代码，并不需要是表面看起来简洁整齐的代码，而更重要的是，代码的编写方法能**容易显露**常见的编程错误。
 
-#### C/C++ 的数据、代码及内存
+#### 3.2 C/C++ 的数据、代码及内存
 - 大于8位（1字节）的值称为 **多字节量（multi-byte quantity）**。
 
 - 内存中存储多字节整数有两种方式：
