--- a/Notes/游戏开发/《游戏引擎架构》笔记.md
+++ b/Notes/游戏开发/《游戏引擎架构》笔记.md
@@ -347,3 +347,26 @@
 - **圆柱坐标系（cylindrical coordinate system）** ：此坐标系由 3 部分组成，分别是垂直“高度”轴 h、从垂直轴发射出来的辐射轴 r、和 yaw 角度 θ。
 
 - **球坐标系（spherical coordinate system）** ：此坐标系由 3 部分组成，分别是俯仰角（pitch）phi（φ）、偏航角（yaw）theta（θ）和半径长度 r。
+
+#### 4.2 矢量
+- **矢量（vector）** 指n维空间中包含 **模（magnitude）** 和**方向**的量。矢量可绘画成**有向线段**，线段自一点（**尾**）延伸至另一点（**头**）。
+
+- 点和方向的加减：
+
+    - 方向 + 方向 = 方向
+
+    - 方向 - 方向 = 方向
+
+    - 点 + 方向 = 点
+
+    - 点 - 点 = 方向
+
+    - 点 + 点 = **无意义**
+
+- **单位矢量（unit vector）** 即是模（长度）为 1 的矢量。
+
+- **矢量乘积**：
+
+    - **点积（dot product）**，又称为 **标量积（scalar product）** 或 **内积（inner product）**。
+
+    - **叉积（cross product）**，又称为 **矢量积（vector product）** 或 **外积（outer product）**。
