--- a/Notes/游戏开发/《游戏引擎架构》笔记.md
+++ b/Notes/游戏开发/《游戏引擎架构》笔记.md
@@ -368,5 +368,23 @@
 - **矢量乘积**：
 
     - **点积（dot product）**，又称为 **标量积（scalar product）** 或 **内积（inner product）**。
+    
+        两矢量的点积结果是一个**标量**，此标量定义为两矢量中每对分量乘积之和：
+        
+        <strong>a</strong> \* <strong>b</strong> = a<sub>x</sub>b<sub>x</sub> + a<sub>y</sub>b<sub>y</sub> + a<sub>z</sub>b<sub>z</sub> = d （一个标量）
+        
+        点积也可以写成两矢量的模相乘后，再乘以两矢量间夹角的余弦：
+        
+        <strong>a</strong> \* <strong>b</strong> = |<strong>a</strong>||<strong>b</strong>|cos<i>θ</i>
+        
+        点积符合 **交换律（commutative）**，以及在加法上符合 **分配律（distributive）**：
+        
+        <strong>a</strong> \* <strong>b</strong> = <strong>b</strong> \* <strong>a</strong>
+        
+        <strong>a</strong> \* (<strong>b</strong> + <strong>c</strong>) = <strong>a</strong> \* <strong>b</strong> + <strong>a</strong> \* <strong>c</strong>
+        
+        点积可结合标量乘法：
+        
+        (<i>s</i><strong>a</strong>) \* <strong>b</strong> = <strong>a</strong> \* <i>s</i><strong>b</strong> = <i>s</i>(<strong>a</strong> \* <strong>b</strong>)
 
     - **叉积（cross product）**，又称为 **矢量积（vector product）** 或 **外积（outer product）**。
