--- a/Notes/游戏开发/《游戏引擎架构》笔记.md
+++ b/Notes/游戏开发/《游戏引擎架构》笔记.md
@@ -429,3 +429,43 @@
         
             (<i>s</i><strong>a</strong>) × <strong>b</strong> = <strong>a</strong> × (<i>s</i><strong>b</strong>) = <i>s</i>(<strong>a</strong> × <strong>b</strong>)
 
+- **线性插值（linear interpolation）** 是一个简单的数学运算，用来计算两个已知点的中间点。此运算的名称通常简写成`LERP`。此运算定义如下，其中 β 介于并包含 0~1：
+
+    <b>L</b> = <b>LERP</b>(<b>A</b>, <b>B</b>, β) = (1 - β)<b>A</b> + β<b>B</b>
+    
+    = [(1 - β)A<sub>x</sub> + βB<sub>x</sub>, (1 - β)A<sub>y</sub> + βB<sub>y</sub>,  (1 - β)A<sub>z</sub> + βB<sub>z</sub>]
+
+#### 4.3 矩阵
+- **矩阵（matrix）** 是由 m × n 个标量组成的长方形数组。矩阵便于表示线性变换（transformation），如平移（translation）、旋转（rotation）和缩放（scaling）。
+
+- 可以视 3 × 3 矩阵的行和列为三维矢量。若某 3 × 3 矩阵中的所有行及列矢量为单位矢量，则该矩阵称为 **特殊正交矩阵（special orthogonal matrix）**、**各向同性矩阵（isotropic matrix）** 或 **标准正交矩阵（orthonormal matrix）**。
+
+- 某些条件下，4 × 4 矩阵可表示任意三维**变换**，包括**平移**、**旋转**和**缩放**。这种矩阵称为**变换矩阵**。
+
+- 矩阵乘法不符合交换律，即：
+
+    <b>A</b><b>B</b> ≠ <b>B</b><b>B</b>
+    
+- 点和矢量都可以表示为 **行矩阵（row matrix）**（1 × n）或 **列矩阵（column matrix）**（n × 1），其中 n 为使用中的空间维度。
+
+    - 要把 1 × n 行矢量乘以 n × n 矩阵，矢量必须置于矩阵的**左方**
+    
+    - 要把 n × n 矩阵乘以 n × 1 列矢量，矢量必须置于矩阵的**右方**
+    
+- **单位矩阵（identity matrix）** 是指，它乘以任何其他矩阵，都会得出和原来一样的矩阵。单位矩阵通常写作 **I**。单位矩阵是正方形矩阵，对角线上的元素皆为 1，其他元素为 0：
+
+    ```
+           [1 0 0]
+    I3x3 = [0 1 0]
+           [0 0 1]
+    ```
+    
+    <b>A</b><b>I</b> = <b>I</b><b>A</b> = <b>A</b>
+    
+- 矩阵 A 的 **逆矩阵（inverse matrix）**（写作**A**<sup>-1</sup>）能**还原**矩阵 A 的变换。特别注意：矩阵串接后求逆，相当于**反向串接**各个矩阵的逆矩阵。
+
+    (**ABC**)<sup>-1</sup> = **C**<sup>-1</sup>**B**<sup>-1</sup>**A**<sup>-1</sup>
+
+- 矩阵 M 的 **转置（transpose）** 写作 **M**<sup>T</sup>。转置矩阵就是把原来矩阵以主对角线（diagonal）为对称轴做反射，即行与列交换。
+
+    (**ABC**)<sup>T</sup> = **C**<sup>T</sup>**B**<sup>T</sup>**A**<sup>T</sup>
