--- a/Notes/游戏开发/《游戏引擎架构》笔记.md
+++ b/Notes/游戏开发/《游戏引擎架构》笔记.md
@@ -368,71 +368,71 @@
 - **矢量乘积**：
 
     - **点积（dot product）**，又称为 **标量积（scalar product）** 或 **内积（inner product）**。
-    
+
         - 两矢量的点积结果是一个**标量**，此标量定义为两矢量中每对分量乘积之和：
-        
+
             <strong>a</strong> \* <strong>b</strong> = a<sub>x</sub>b<sub>x</sub> + a<sub>y</sub>b<sub>y</sub> + a<sub>z</sub>b<sub>z</sub> = d （一个标量）
-        
+
         - 点积也可以写成两矢量的模相乘后，再乘以两矢量间夹角的余弦：
-        
+
             <strong>a</strong> \* <strong>b</strong> = |<strong>a</strong>||<strong>b</strong>|cos<i>θ</i>
-        
+
         - 点积符合 **交换律（commutative）**，以及在加法上符合 **分配律（distributive）**：
-        
+
             <strong>a</strong> \* <strong>b</strong> = <strong>b</strong> \* <strong>a</strong>
-        
+
             <strong>a</strong> \* (<strong>b</strong> + <strong>c</strong>) = <strong>a</strong> \* <strong>b</strong> + <strong>a</strong> \* <strong>c</strong>
-        
+
         - 点积可结合标量乘法：
-        
+
             (<i>s</i><strong>a</strong>) \* <strong>b</strong> = <strong>a</strong> \* <i>s</i><strong>b</strong> = <i>s</i>(<strong>a</strong> \* <strong>b</strong>)
-        
+
         - 模的平方可以用矢量和自身的点积计算，而要计算矢量的模则可以将点积开平方：
-        
+
             |<strong>a</strong>|<sup>2</sup> = <strong>a</strong> \* <strong>a</strong>
-        
+
             |<strong>a</strong>| = √(<strong>a</strong> \* <strong>a</strong>)
-        
+
         - 点积判定（dot product test）：
-        
+
             **共线**：(<strong>a</strong> \* <strong>b</strong>) = |<strong>a</strong>||<strong>b</strong>| = <i>a</i><i>b</i> （即夹角精确地为 0°。如果 **a** 和 **b** 都是**单位矢量**，则点积为 +1）
-        
+
             **共线但方向相反**：(<strong>a</strong> \* <strong>b</strong>) = -<i>a</i><i>b</i> （即夹角精确地为 180°。若 **a** 和 **b** 都是**单位矢量**且共线，则点积为 -1）
-        
+
             **垂直**：(<strong>a</strong> \* <strong>b</strong>) = 0 （即夹角为 90°）
-        
+
             **相同方向**：(<strong>a</strong> \* <strong>b</strong>) > 0 （即夹角小于 90°）
-        
+
             **相反反向**：(<strong>a</strong> \* <strong>a</strong>) < 0 （即夹角大于 90°）
 
     - **叉积（cross product）**，又称为 **矢量积（vector product）** 或 **外积（outer product）**。
-    
+
         - 两个矢量的叉积会产生另一个**矢量**，该矢量**垂直**于原来的两个相乘矢量。
-        
+
             <strong>a</strong> × <strong>b</strong> = [(a<sub>y</sub>b<sub>z</sub> - a<sub>z</sub>b<sub>y</sub>), (a<sub>z</sub>b<sub>x</sub> - a<sub>x</sub>b<sub>z</sub>), (a<sub>x</sub>b<sub>y</sub> - a<sub>y</sub>b<sub>x</sub>)]
-        
+
             = (a<sub>y</sub>b<sub>z</sub> - a<sub>z</sub>b<sub>y</sub>)<b>i</b> + (a<sub>z</sub>b<sub>x</sub> - a<sub>x</sub>b<sub>z</sub>)<b>j</b> + (a<sub>x</sub>b<sub>y</sub> - a<sub>y</sub>b<sub>x</sub>)<b>k</b>
-        
+
         - 叉积的模等于两矢量各自的模的积再乘以两矢量夹角的正弦：
-        
+
             |<strong>a</strong> × <strong>b</strong>| = |<strong>a</strong>||<strong>b</strong>|sin<i>θ</i>
-        
+
         - 叉积**不**符合**交换律**，然而，叉积符合**反交换律**：
-        
+
             <strong>a</strong> × <strong>b</strong> = -<strong>b</strong> × <strong>a</strong>
-        
+
         - 叉积在加法上符合分配率：
-        
+
             <strong>a</strong> × (<strong>b</strong> + <strong>c</strong>) = (<strong>a</strong> × <strong>b</strong>) + (<strong>a</strong> × <strong>c</strong>)
-        
+
         - 叉积和标量乘法可如下结合：
-        
+
             (<i>s</i><strong>a</strong>) × <strong>b</strong> = <strong>a</strong> × (<i>s</i><strong>b</strong>) = <i>s</i>(<strong>a</strong> × <strong>b</strong>)
 
 - **线性插值（linear interpolation）** 是一个简单的数学运算，用来计算两个已知点的中间点。此运算的名称通常简写成`LERP`。此运算定义如下，其中 β 介于并包含 0~1：
 
     <b>L</b> = <b>LERP</b>(<b>A</b>, <b>B</b>, β) = (1 - β)<b>A</b> + β<b>B</b>
-    
+
     = [(1 - β)A<sub>x</sub> + βB<sub>x</sub>, (1 - β)A<sub>y</sub> + βB<sub>y</sub>,  (1 - β)A<sub>z</sub> + βB<sub>z</sub>]
 
 #### 4.3 矩阵
@@ -445,13 +445,13 @@
 - 矩阵乘法不符合交换律，即：
 
     <b>A</b><b>B</b> ≠ <b>B</b><b>B</b>
-    
+
 - 点和矢量都可以表示为 **行矩阵（row matrix）**（1 × n）或 **列矩阵（column matrix）**（n × 1），其中 n 为使用中的空间维度。
 
     - 要把 1 × n 行矢量乘以 n × n 矩阵，矢量必须置于矩阵的**左方**
-    
+
     - 要把 n × n 矩阵乘以 n × 1 列矢量，矢量必须置于矩阵的**右方**
-    
+
 - **单位矩阵（identity matrix）** 是指，它乘以任何其他矩阵，都会得出和原来一样的矩阵。单位矩阵通常写作 **I**。单位矩阵是正方形矩阵，对角线上的元素皆为 1，其他元素为 0：
 
     ```
@@ -459,9 +459,9 @@
     I3x3 = [0 1 0]
            [0 0 1]
     ```
-    
+
     <b>A</b><b>I</b> = <b>I</b><b>A</b> = <b>A</b>
-    
+
 - 矩阵 A 的 **逆矩阵（inverse matrix）**（写作**A**<sup>-1</sup>）能**还原**矩阵 A 的变换。特别注意：矩阵串接后求逆，相当于**反向串接**各个矩阵的逆矩阵。
 
     (**ABC**)<sup>-1</sup> = **C**<sup>-1</sup>**B**<sup>-1</sup>**A**<sup>-1</sup>
@@ -469,3 +469,7 @@
 - 矩阵 M 的 **转置（transpose）** 写作 **M**<sup>T</sup>。转置矩阵就是把原来矩阵以主对角线（diagonal）为对称轴做反射，即行与列交换。
 
     (**ABC**)<sup>T</sup> = **C**<sup>T</sup>**B**<sup>T</sup>**A**<sup>T</sup>
+
+- 当点或矢量从三维延伸至四维，便称为 **齐次坐标（homogeneous coordinates）**。
+
+- 在齐次坐标中，可以把点的 <i>w</i> 分量设为 1，而把方向矢量的 <i>w</i> 分量设为 0。
