--- a/Notes/游戏开发/《游戏引擎架构》笔记.md
+++ b/Notes/游戏开发/《游戏引擎架构》笔记.md
@@ -473,3 +473,38 @@
 - 当点或矢量从三维延伸至四维，便称为 **齐次坐标（homogeneous coordinates）**。
 
 - 在齐次坐标中，可以把点的 <i>w</i> 分量设为 1，而把方向矢量的 <i>w</i> 分量设为 0。
+
+- 4 × 4 变换矩阵可切割为 4 个组成部分：
+
+    ```
+    [U3*3   03*1]
+    [t1*3      1]
+    ```
+
+    - 左上角 3 × 3 矩阵 **U**，代表旋转及/或缩放
+
+    - 1 × 3 平移矢量 **t**
+
+    - 3 × 1 零矢量 **0** = [0 0 0]<sup>T</sup>
+
+    - 矩阵右下角的标量 1
+
+- 平移
+
+    ![](./Images/matrix_transformation_1.png)
+
+    缩写：
+
+    ![](./Images/matrix_transformation_2.png)
+
+- 旋转
+
+    ![](./Images/matrix_rotation_1.png)
+
+- 缩放
+
+    ![](./Images/matrix_scale_1.png)
+
+    缩写：
+
+    ![](./Images/matrix_scale_2.png)
