--- a/Notes/游戏开发/《游戏引擎架构》笔记.md
+++ b/Notes/游戏开发/《游戏引擎架构》笔记.md
@@ -474,12 +474,9 @@
 
 - 在齐次坐标中，可以把点的 <i>w</i> 分量设为 1，而把方向矢量的 <i>w</i> 分量设为 0。
 
-- 4 × 4 变换矩阵可切割为 4 个组成部分：
+- 4 × 4 **变换矩阵**可切割为 4 个组成部分：
 
-    ```
-    [U3*3   03*1]
-    [t1*3      1]
-    ```
+    ![](./Images/matrix_4x4_1.png)
 
     - 左上角 3 × 3 矩阵 **U**，代表旋转及/或缩放
 
@@ -489,22 +486,28 @@
 
     - 矩阵右下角的标量 1
 
-- 平移
+    - 平移
 
-    ![](./Images/matrix_transformation_1.png)
+        ![](./Images/matrix_transformation_1.png)
 
-    缩写：
+        缩写：
 
-    ![](./Images/matrix_transformation_2.png)
+        ![](./Images/matrix_transformation_2.png)
 
-- 旋转
+    - 旋转
 
-    ![](./Images/matrix_rotation_1.png)
+        ![](./Images/matrix_rotation_1.png)
 
-- 缩放
+    - 缩放
 
-    ![](./Images/matrix_scale_1.png)
+        ![](./Images/matrix_scale_1.png)
 
-    缩写：
+        缩写：
 
-    ![](./Images/matrix_scale_2.png)
+        ![](./Images/matrix_scale_2.png)
+
+- 物理学上，一族坐标轴代表一个参考系（frame of reference），有时候称一组轴为 **坐标系（coordinate frame，或简称 frame）**。游戏业界则会使用 **坐标空间（coordinate space）**一词，或简称 **空间（space）**，来表示一组坐标轴。
+
+- 常用坐标空间：
+
+    - 模型空间：使用 Maya 或 3ds Max 之类的工具去建立三角形网络，三角形顶点的位置是相对于一个笛卡尔坐标系，称次坐标系为 **模型空间（model space）**，也可称为 **物体空间（object space）** 或 **局部空间（local space）**。
