--- a/Notes/游戏开发/《游戏引擎架构》笔记.md
+++ b/Notes/游戏开发/《游戏引擎架构》笔记.md
@@ -510,4 +510,8 @@
 
 - 常用坐标空间：
 
-    - 模型空间：使用 Maya 或 3ds Max 之类的工具去建立三角形网络，三角形顶点的位置是相对于一个笛卡尔坐标系，称次坐标系为 **模型空间（model space）**，也可称为 **物体空间（object space）** 或 **局部空间（local space）**。
+    - **模型空间**：使用 Maya 或 3ds Max 之类的工具去建立三角形网络，三角形顶点的位置是相对于一个笛卡尔坐标系，称次坐标系为 **模型空间（model space）**，也可称为 **物体空间（object space）** 或 **局部空间（local space）**。
+
+    - **世界空间（world space）** ：是一个固定坐标空间。游戏世界中所有物体的位置、定向和缩放都会用此空间表示。
+
+    - **观察空间（view space）** ：又称为 **摄像机空间（camera space）**，是固定于摄像机的坐标系。
