--- a/Notes/游戏开发/《游戏引擎架构》笔记.md
+++ b/Notes/游戏开发/《游戏引擎架构》笔记.md
@@ -515,3 +515,7 @@
     - **世界空间（world space）** ：是一个固定坐标空间。游戏世界中所有物体的位置、定向和缩放都会用此空间表示。
 
     - **观察空间（view space）** ：又称为 **摄像机空间（camera space）**，是固定于摄像机的坐标系。
+
+- 变换法矢量
+
+    - **法矢量**是一种特殊的矢量，因为它除了是单位矢量（通常情况是）外，法矢量还有附加要求——维持与对应的表面或平面**垂直**。
