--- a/Notes/游戏开发/《游戏引擎架构》笔记.md
+++ b/Notes/游戏开发/《游戏引擎架构》笔记.md
@@ -519,3 +519,30 @@
 - 变换法矢量
 
     - **法矢量**是一种特殊的矢量，因为它除了是单位矢量（通常情况是）外，法矢量还有附加要求——维持与对应的表面或平面**垂直**。
+
+#### 四元数
+- **单位长度**四元数：<i>q</i><sub>x</sub><sup>2</sup> + <i>q</i><sub>y</sub><sup>2</sup> + <i>q</i><sub>z</sub><sup>2</sup> + <i>q</i><sub>w</sub><sup>2</sup> = 1
+
+- **单位四元数**可以视觉化为三维矢量加上第四维的标量坐标。矢量部分 <b>q</b><sub><i>V</i></sub> 是旋转的单位轴乘以旋转半角的正弦；而标量部分 <i>q</i><sub><i>S</i></sub> 是旋转半角的余弦。
+
+    ![](./Images/quaternions_1.png)
+
+    其中 <b>a</b> 为旋转轴方向的单位矢量，而 <i>θ</i> 为旋转角度。旋转方向使用**右手法则**。
+
+- **四元数乘法**：给定两个四元数 p 和 q，分别代表旋转 **P** 和 **Q**，则 pq 代表两旋转的合成旋转（即旋转 **Q** 之后再旋转 **P**），此乘法称为格拉斯曼积（Grassmann product）。
+
+    ![](./Images/quaternions_2.png)
+
+- **共轭四元数**：写成 q<sup>*</sup>
+
+    ![](./Images/quaternions_3.png)
+
+    共轭是**矢量部分**求反，**标量部分**不变。
+
+- **逆四元数**：对四元数 q 求 **逆（inverse）** 写为 q<sup>-1</sup>，逆四元数和原四元数的乘积会变成标量 1（即 qq<sup>-1</sup> = 0**i** + 0**j** + 0**k** + 1）。四元数 [0 0 0 1] 代表零旋转（从 sin0 = 0 代表前 3 个分量并且 cos0 = 1 代表第 4 个分量）。其定义如下：
+
+    ![](./Images/quaternions_4.png)
+
+    由于我们使用的四元数都是用于代表三维旋转的，这些四元数都是单位长度的（即 |q| = 1）。在这种情况下，共轭和逆四元数是相等的：
+
+        ![](./Images/quaternions_5.png)
