--- a/Notes/游戏开发/《游戏引擎架构》笔记.md
+++ b/Notes/游戏开发/《游戏引擎架构》笔记.md
@@ -546,3 +546,16 @@
     由于我们使用的四元数都是用于代表三维旋转的，这些四元数都是单位长度的（即 |q| = 1）。在这种情况下，共轭和逆四元数是相等的：
 
         ![](./Images/quaternions_5.png)
+
+- 积的共轭及逆四元数
+
+    四元数积（pq）的共轭，等于求各个四元数的共轭后，以相反次序相乘：
+    
+        ![](./Images/quaternions_6.png)
+        
+    四元数积的逆等于求各个四元数的逆后，以相反次序相乘：
+    
+        ![](./Images/quaternions_7.png)
+        
+    **这种相反次序运算，同样适用于矩阵积的转置和逆。**
+
