--- a/Notes/游戏开发/《游戏引擎架构》笔记.md
+++ b/Notes/游戏开发/《游戏引擎架构》笔记.md
@@ -634,3 +634,18 @@
         }
     }
     ```
+
+#### 产生随机数
+- 线性同余产生器（linear congruential generator， LCG）
+
+- 梅森旋转算法（Mersenne Twister，MT)
+
+    优点：
+
+    1. MT 有庞大的周期：2<sup>19937</sup>-1
+    2. MT 有非常高阶的均匀分布维度（dimensional equidistribution）
+    3. MT 通过了多个统计随机性的测试
+    4. MT 很快
+
+- 所有之母及 Xorshift
+
