--- a/Notes/游戏开发/《游戏引擎架构》笔记.md
+++ b/Notes/游戏开发/《游戏引擎架构》笔记.md
@@ -649,3 +649,35 @@
 
 - 所有之母及 Xorshift
 
+## 第二部分 低阶引擎系统
+### 第五章 游戏支持系统
+#### 子系统的启动和终止
+使用 C++ 实现游戏引擎时，由于 C++ 静态变量和全局变量构造函数和析构函数的调用时机不可控，因此我们需要手动管理游戏子系统初始化及回收逻辑。
+
+一般我们可以为每一个系统实现`startUp()`方法和`shutDown()`方法，再由我们在**游戏开始时**按照预期顺序，依次调用`startUp()`方法对各个子系统进行初始化，在**游戏结束时**按照预期顺序，依次调用`shutDown()`方法对各个子系统进行终止处理。
+
+#### 内存管理
+内存对效能的影响有两方面：
+1. 以 `malloc()` 或 C++ 的全局 `new` 运算符进行**动态内存分配（dynamic memory allocation）**，是非常慢的操作。要提升效能，最佳方法是尽量避免动态分配内存，不然也可利用自制的内存分配器来大大减低分配成本。
+
+2. 许多时候在 CPU 上，软件的效能受其**内存访问模式（memory access pattern）**主宰。可以看到，将数据置于细小**连续**的内存块，相比把数据分散至广阔的内存地址，CPU 对前者的操作会高效得多。
+
+- 优化动态内存分配
+
+    通过 `malloc()/free()` 或 C++ 的全局 `new/delete` 运算符动态分配内存——又称为**堆内存（heap allocation）**——通常是非常慢的。
+
+    低效主要来自两个原因：1. 堆分配器（heap allocator）是通用的设施，需要大量的管理开销。2. 在多数操作系统上，`malloc()/free()`必然会从用户模式（user mode)切换至内核模式（kernel mode），处理请求，再切换至原来的程序，这些上下文切换（context-switch）可能会耗费很多时间。
+
+    游戏开发中一个常见的经验法则：**维持最低限度的堆分配，并且永不在紧凑循环中使用堆分配**
+
+    常见的内存分配器：
+
+    - 基于堆栈的分配器
+
+    - 双端堆栈分配器
+
+    - 池分配器
+
+    - 含对齐功能的分配器
+
+    - 单帧和双缓冲内存分配器
