--- a/Notes/游戏开发/《游戏引擎架构》笔记.md
+++ b/Notes/游戏开发/《游戏引擎架构》笔记.md
@@ -681,3 +681,18 @@
     - 含对齐功能的分配器
 
     - 单帧和双缓冲内存分配器
+
+- 内存碎片（memory fragmentation）：问题在于，就算有足够的自由内存，分配请求仍然可能失败。在支持**虚拟内存（virtual memory）**的操作系统上，并非大问题。
+
+    其中有两个方法可以用来解决该问题：
+
+    - 以堆栈和池分配器**避免**内存碎片
+
+    - 碎片的**整理**以及指针的**重定位**
+
+- 缓存一致性
+
+    - 避免数据缓存命中失败：把数据编排进连续的内存块中，尺寸越小越好，并且要**顺序**访问这些数据。
+
+    - 避免指令缓存命中失败：1. 高效能代码的体积**越小越好**，体积以机器码指令数目为单位。2. 在性能关键的代码段落中，**避免使用函数**。3. 若要调用某函数，就把该函数置于**最接近**调用函数的地方，最好是紧接调用函数的前后，而**不要**把该函数置于另一翻译单元。4. 谨慎使用**内联函数**。
+
