--- a/Notes/游戏开发/《游戏引擎架构》笔记.md
+++ b/Notes/游戏开发/《游戏引擎架构》笔记.md
@@ -696,3 +696,35 @@
 
     - 避免指令缓存命中失败：1. 高效能代码的体积**越小越好**，体积以机器码指令数目为单位。2. 在性能关键的代码段落中，**避免使用函数**。3. 若要调用某函数，就把该函数置于**最接近**调用函数的地方，最好是紧接调用函数的前后，而**不要**把该函数置于另一翻译单元。4. 谨慎使用**内联函数**。
 
+#### 容器
+- 常见容器
+
+    1. **数组（array）**：有序、连续存储数据的元素集合，使用索引存取元素。
+
+    2. **动态数组（dynamic array）**：可在运行期动态改变长度的数组。
+
+    3. **链表（linked list）**：有序集合，但其数据在内存中是以非连续方式存储的。
+
+    4. **堆栈（stack)**：在新增和移除数据时，采用后进先出（last-in-first-out，LIFO）的模式，也即压入（push）和弹出（pop）操作。
+
+    5. **队列（queue）**：在新增和移除数据时，采用先进先出（first-in-first-out，FIFO）的模式。
+
+    6. **双端队列（double-ended queue，deque）**：可以在两端高效地插入及移除数据。
+
+    7. **优先队列（priority queue）**：加入元素后，可用事先定义了的优先值计算方式，高效地弹出队列中优先值最高的元素。
+
+    8. **树（tree）**
+
+    9. **二叉查找树（binary search tree，BST）：二叉查找树中的每个节点最多含有两个子节点。由于节点按预先定义的方式排列，任何时候都可以按该排列方式遍历整棵树。二叉查找树有多种类型，包括**红黑树（red-black tree）**、**伸展树（splay tree）**、AVL树（AVL tree）**。
+
+    10. **二叉堆（binary heap）**：采用完全（或接近完全）二叉树的数据结构，通常（静态或动态）数组存储。根节点必然是堆中最大（或最小）的元素。
+
+    11. **字典（dictionary）**：由键值对（key-value pair）组成的表。
+
+    12. **集合（set）**：保证容器内没有重复元素。
+
+    13. **图（graph）**：节点的集合，节点之间可任意以单向或双向路径连接。
+
+    14. 有向非循环图（directed acyclic graph，DAG）：图的特例，节点间以单向连接，并且无**循环**。
+
+    
