--- a/Notes/游戏开发/《游戏引擎架构》笔记.md
+++ b/Notes/游戏开发/《游戏引擎架构》笔记.md
@@ -727,4 +727,16 @@
 
     14. 有向非循环图（directed acyclic graph，DAG）：图的特例，节点间以单向连接，并且无**循环**。
 
-    
+#### 字符串
+- 存在的问题
+
+    1. 本地化（localization）
+
+    2. 性能开销
+
+- 本地化
+
+    - UTF-8：每个字符占 1~3 字节，向后兼容 ASCII 编码，称为**多字节字符集（multibyte character set，MBCS）**，因为每个字符占一至多个多个字符的存储空间。
+
+    - UTF-16：每个字符都确切地使用 16 位，称为**宽字符集（wide character set，WCS)**，因为每个字符是16位宽。
+
