--- a/Notes/游戏开发/《游戏引擎架构》笔记.md
+++ b/Notes/游戏开发/《游戏引擎架构》笔记.md
@@ -1,4 +1,40 @@
 # 《游戏引擎架构》笔记
+## 目录
+- [《游戏引擎架构》笔记](#%E3%80%8A%E6%B8%B8%E6%88%8F%E5%BC%95%E6%93%8E%E6%9E%B6%E6%9E%84%E3%80%8B%E7%AC%94%E8%AE%B0)
+    - [目录](#%E7%9B%AE%E5%BD%95)
+    - [第一部分 基础](#%E7%AC%AC%E4%B8%80%E9%83%A8%E5%88%86-%E5%9F%BA%E7%A1%80)
+        - [第一章 导论](#%E7%AC%AC%E4%B8%80%E7%AB%A0-%E5%AF%BC%E8%AE%BA)
+            - [1.1 典型游戏团队的结构](#11-%E5%85%B8%E5%9E%8B%E6%B8%B8%E6%88%8F%E5%9B%A2%E9%98%9F%E7%9A%84%E7%BB%93%E6%9E%84)
+            - [1.2 不同的游戏类型](#12-%E4%B8%8D%E5%90%8C%E7%9A%84%E6%B8%B8%E6%88%8F%E7%B1%BB%E5%9E%8B)
+            - [1.3 运行时引擎架构](#13-%E8%BF%90%E8%A1%8C%E6%97%B6%E5%BC%95%E6%93%8E%E6%9E%B6%E6%9E%84)
+            - [1.4 工具及资产管道](#14-%E5%B7%A5%E5%85%B7%E5%8F%8A%E8%B5%84%E4%BA%A7%E7%AE%A1%E9%81%93)
+        - [第二章 专业工具](#%E7%AC%AC%E4%BA%8C%E7%AB%A0-%E4%B8%93%E4%B8%9A%E5%B7%A5%E5%85%B7)
+            - [2.1 版本控制](#21-%E7%89%88%E6%9C%AC%E6%8E%A7%E5%88%B6)
+                - [为何使用版本控制](#%E4%B8%BA%E4%BD%95%E4%BD%BF%E7%94%A8%E7%89%88%E6%9C%AC%E6%8E%A7%E5%88%B6)
+            - [2.2 Visual Studio](#22-visual-studio)
+                - [调试发布生成的窍门](#%E8%B0%83%E8%AF%95%E5%8F%91%E5%B8%83%E7%94%9F%E6%88%90%E7%9A%84%E7%AA%8D%E9%97%A8)
+            - [2.3 剖析工具](#23-%E5%89%96%E6%9E%90%E5%B7%A5%E5%85%B7)
+            - [2.4 内存泄露和损坏检测](#24-%E5%86%85%E5%AD%98%E6%B3%84%E9%9C%B2%E5%92%8C%E6%8D%9F%E5%9D%8F%E6%A3%80%E6%B5%8B)
+            - [2.5 其他工具](#25-%E5%85%B6%E4%BB%96%E5%B7%A5%E5%85%B7)
+        - [第三章 游戏软件工程基础](#%E7%AC%AC%E4%B8%89%E7%AB%A0-%E6%B8%B8%E6%88%8F%E8%BD%AF%E4%BB%B6%E5%B7%A5%E7%A8%8B%E5%9F%BA%E7%A1%80)
+            - [3.1 重温 C++ 及最佳实践](#31-%E9%87%8D%E6%B8%A9-c-%E5%8F%8A%E6%9C%80%E4%BD%B3%E5%AE%9E%E8%B7%B5)
+                - [基本概念](#%E5%9F%BA%E6%9C%AC%E6%A6%82%E5%BF%B5)
+                - [编码标准](#%E7%BC%96%E7%A0%81%E6%A0%87%E5%87%86)
+            - [3.2 C/C++ 的数据、代码及内存](#32-cc-%E7%9A%84%E6%95%B0%E6%8D%AE%E3%80%81%E4%BB%A3%E7%A0%81%E5%8F%8A%E5%86%85%E5%AD%98)
+            - [3.3 捕捉及处理错误](#33-%E6%8D%95%E6%8D%89%E5%8F%8A%E5%A4%84%E7%90%86%E9%94%99%E8%AF%AF)
+        - [第四章 游戏所需的三维数学](#%E7%AC%AC%E5%9B%9B%E7%AB%A0-%E6%B8%B8%E6%88%8F%E6%89%80%E9%9C%80%E7%9A%84%E4%B8%89%E7%BB%B4%E6%95%B0%E5%AD%A6)
+            - [4.1 坐标系](#41-%E5%9D%90%E6%A0%87%E7%B3%BB)
+            - [4.2 矢量](#42-%E7%9F%A2%E9%87%8F)
+            - [4.3 矩阵](#43-%E7%9F%A9%E9%98%B5)
+            - [四元数](#%E5%9B%9B%E5%85%83%E6%95%B0)
+            - [产生随机数](#%E4%BA%A7%E7%94%9F%E9%9A%8F%E6%9C%BA%E6%95%B0)
+    - [第二部分 低阶引擎系统](#%E7%AC%AC%E4%BA%8C%E9%83%A8%E5%88%86-%E4%BD%8E%E9%98%B6%E5%BC%95%E6%93%8E%E7%B3%BB%E7%BB%9F)
+        - [第五章 游戏支持系统](#%E7%AC%AC%E4%BA%94%E7%AB%A0-%E6%B8%B8%E6%88%8F%E6%94%AF%E6%8C%81%E7%B3%BB%E7%BB%9F)
+            - [子系统的启动和终止](#%E5%AD%90%E7%B3%BB%E7%BB%9F%E7%9A%84%E5%90%AF%E5%8A%A8%E5%92%8C%E7%BB%88%E6%AD%A2)
+            - [内存管理](#%E5%86%85%E5%AD%98%E7%AE%A1%E7%90%86)
+            - [容器](#%E5%AE%B9%E5%99%A8)
+            - [字符串](#%E5%AD%97%E7%AC%A6%E4%B8%B2)
+
 ## 第一部分 基础
 ### 第一章 导论
 #### 1.1 典型游戏团队的结构
