--- a/Notes/游戏开发/《游戏引擎架构》笔记.md
+++ b/Notes/游戏开发/《游戏引擎架构》笔记.md
@@ -740,3 +740,17 @@
 
     - UTF-16：每个字符都确切地使用 16 位，称为**宽字符集（wide character set，WCS)**，因为每个字符是16位宽。
 
+### 第六章 资源及文件系统
+#### 文件系统
+- 通常要提供以下几类功能
+
+    - 操作文件名和路径
+
+    - 开、关、读、写个别文件
+
+    - 扫描哦目录下的内容
+
+    - 处理异步文件输入/输出请求（做串流用）
+
+#### 资源管理器
+每个资源管理器都由两个元件组成，这两个元件既独立又互相整合。其一负责管理离线工具链，用来创建资产及把它们转换成引擎可用的形式。另一元件在执行期管理资源，确保资源在使用之前已载入内存，并在不需要的时候把它们从内存卸下。
