--- a/Notes/编译原理/《编译原理》笔记.md
+++ b/Notes/编译原理/《编译原理》笔记.md
@@ -1,5 +1,7 @@
 # 编译原理
 
+
+
 ## 第1章 引论
 
 程序设计语言是向人以及计算机描述计算过程的记号
@@ -214,6 +216,88 @@
 - **块结构**：允许语句块互相嵌套的语言成为 **块结构** 的语言。假设一个块中有一个 *x* 的声明 *D*，而嵌套于这个块中的块 *B* 中有一个对名字 *x* 的使用。如果在这两个块之间没有其他声明了 *x* 的块，那么这个 *x* 的使用位于 *D* 的作用域内
 - **参数传递**：参数可以通过值或引用的方式从调用过程传递给被调用过程。当通过值传递方式传递大型对象时，实际被传递的值是指向这些对象本身的引用。这样就变成了一个高效的引用调用
 - **别名**：当参数被以引用传递方式（高效地）传递时，两个形式参数可能会指向同一个对象。这会造成一个变量的修改改变了另一个变量的值
+
+
+
+## 第2章 一个简单的语法制导翻译器
+
+
+
+### 2.1 引言
+
+编译器在分析阶段把一个源程序划分成各个组成部分，并生成源程序的内部表示形式。这种内部表示称为中间代码。然后，编译器在合成阶段将这个中间代码翻译成目标程序
+
+一个编译器前端的模型如下图：
+
+![一个编译器前端的模型](./Images/p2_3.png)
+
+
+
+### 2.2 语法定义
+
+文法自然地描述了大多数程序设计语言构造的层次化语法结构。例如：
+
+*stmt* → **if** ( *expr* ) *stmt* **else** *stmt*
+
+这样的规则称为 **产生式（production）**。在一个产生式中，像关键字 **if** 和括号这样的词法元素称为 **终结符号（terminal）**。像 *expr* 和 *stmt* 这样的变量表示终结符号的序列，它们称为 **非终结符号（nonterminal）**
+
+
+
+1. **文法定义**
+
+   一个 **上下文无关文法（context-free grammar）** 由四个元素组成：
+
+   1. 一个 **终结符号** 集合，它们有时也称为”词法单元“。终结符号是该文法所定义的语言的基本符号的集合
+   2. 一个 **非终结符号** 集合，它们有时也称为”语法变量“。每个非终结符号表示一个终结符号串的集合
+   3. 一个 **产生式** 集合，其中每个产生式包括一个称为 **产生式头** 或 **左部** 的非终结符号，一个箭头，和一个称为 **产生式体** 或 **右部** 的由终结符号及非终结符号组成的序列
+   4. 指定一个非终结符号为 **开始** 符号
+
+
+
+2. **推导**
+
+- 根据文法推导符号串时，我们首先从开始符号出发，不断将某个非终结符号替换为该非终结符号的某个产生式的体。可以从开始符号推导得到的所有终结符号串的集合称为该文法定义的 **语言（language）**
+- **语法分析（parsing）** 的任务是：接受一个终结符号串作为输入，找出从文法的开始符号推导出这个串的方法。如果不能从文法的开始符号推导得到该终结符号串，则报告该终结符号串中包含的语法错误
+
+
+
+3. **语法分析树**
+
+   给定一个上下文无关文法，该文法的一棵 **语法分析树（parse tree）** 是具有以下性质的树：
+
+   1. 根结点的标号为文法的开始符号
+   2. 每个叶子接点的标号为一个终结符号或 **ε**
+   3. 每个内部结点的标号为一个非终结符号
+   4. 如果非终结符号 *A* 是某个内部结点的标号，并且它的子结点的标号从左至右分别为 *X*<sub>1</sub>，*X*<sub>2</sub>，…，*X*<sub>n</sub>，那么必然存在产生式 *A*→*X*<sub>1</sub>*X*<sub>2</sub>…*X*<sub>n</sub>，其中 *X*<sub>1</sub>，*X*<sub>2</sub>，…，*X*<sub>n</sub> 既可以是终结符号，也可以是非终结符号。作为一个特殊情况，如果 *A*→**ε** 是一个产生式，那么一个标号为 *A* 的结点可以只有一个标号为**ε**的子结点
+
+
+
+​	*一个文法的语言的另一个定义是指任何能够由某棵语法分析树生成的符号串的集合，为一个给定的终结符号串构建一棵语法分析树的过程称为对该符号串进行 **语法分析***
+
+
+
+4. **二义性**
+
+   一个文法可能有多棵语法分析树能够生成同一个给定的终结符号串。这样的文法称为具有 **二义性（ambiguous）**
+
+
+5. **运算符的结合性**
+
+   一般来说，加、减、乘、除是左 **结合（associate）**
+
+   赋值运算符“=”是右结合
+
+
+
+6. **运算符的优先级**
+
+   结合性规则只能作用于同一运算符的多次出现，因此它们无法解决不同运算符之间的二义性问题。为此，当多种运算符出现时，我们需要给出一些规则来定义运算符之间的相对优先关系
+
+
+
+
+
+
 
 
 
