--- a/Notes/编译原理/《编译原理》笔记.md
+++ b/Notes/编译原理/《编译原理》笔记.md
@@ -295,11 +295,25 @@
 
 
 
+### 2.3 语法制导翻译
 
+语法制导翻译是通过向一个文法的产生式附加一些规则或程序片段而得到的
 
+- **属性（attribute）**：属性表示与某个程序构造相关的任意的量。属性可以是多种多样的，比如表达式的数据类型、生成的代码中的指令数目或为某个构造生成的代码中第一条指令的位置等等都是属性的例子。因为我们用文法符号（终结符号或非终结符号）来表示程序构造，所以我们将属性的概念从程序构造扩展到表示这些构造的文法符号上
+- **（语法制导的）翻译方案（translation scheme）**：翻译方案是一种将是程序片段附加到一个文法的各个产生式上的表示法。当在语法分析过程中使用一个产生式时，相应的程序片段就会执行。这些程序片段的执行效果按照语法分析过程的顺序组合起来，得到的结果就是这次分析/综合过程处理源程序得到的翻译结果
 
+1. **后缀表示**
 
+    一个表达式 ***E*** 的 **后缀表示（postfix notation）** 可以按照下面的方式进行归纳定义：
 
+    1. 如果 ***E*** 是一个变量或常量，则 ***E*** 的后缀表示是 ***E*** 本身
 
+    2. 如果 ***E*** 是一个形如 ***E***<sub>1</sub> **op** ***E***<sub>2</sub> 的表达式，其中 **op** 是一个二目运算符，那么 ***E*** 的后缀表示是 ***E'***<sub>1</sub>***E'***<sub>2</sub>**op**，这里 ***E'***<sub>1</sub> 和 ***E'***<sub>2</sub> 分别是 ***E***<sub>1</sub> 和 ***E***<sub>2</sub> 的后缀表示
 
+    3. 如果 ***E*** 是一个形如 ( ***E***<sub>1</sub> ) 的被括号括起来的表达式，则 ***E*** 的后缀表示就是 ***E***<sub>1</sub> 的后缀表示
 
+2. **综合属性**
+
+    **语法制导定义（syntax-directed definition）** 把①每个文法符号和一个属性集合相关联，并且把②每个产生式和一组 语义规则（semantic rule）** 相关联，这些规则用于计算与该产生式中符号相关联的属性值
+
+    
