--- a/Notes/编译原理/《编译原理》笔记.md
+++ b/Notes/编译原理/《编译原理》笔记.md
@@ -314,6 +314,24 @@
 
 2. **综合属性**
 
-    **语法制导定义（syntax-directed definition）** 把①每个文法符号和一个属性集合相关联，并且把②每个产生式和一组 语义规则（semantic rule）** 相关联，这些规则用于计算与该产生式中符号相关联的属性值
+- **语法制导定义（syntax-directed definition）** 把①每个文法符号和一个属性集合相关联，并且把②每个产生式和一组 语义规则（semantic rule）** 相关联，这些规则用于计算与该产生式中符号相关联的属性值
 
     
+- 如果某个属性在语法分析树结点 *N* 上的值是由 *N* 的子结点以及 *N* 本身的属性值确定的，那么这个属性就称为 **综合属性（synthesized attribute）**。综合属性具有一个很好的性质：只需要对语法分析树进行一次自底向上的遍历，就可以计算出属性的值。另一个重要的属性是 **“继承”属性**，继承属性在某个语法分析树结点上的值是由语法分析树中该结点本身、父结点以及兄弟结点上的属性值决定的
+
+3. **简单语法制导定义**
+
+   要得到代表产生式头部的非终结符号的翻译结果的字符串，只需要将产生式体中各非终结符号的翻译结果按照它们在非终结符号中的出现顺序连接起来，并在其中穿插一些附加的串即可。具有这个性质的语法制导定义称为 **简单（simple）** 语法制导定义
+
+4. **树的遍历**
+
+   树的遍历将用于描述属性的求值过程，以及描述一个翻译方案中的各个代码片段的执行过程。一个树的 **遍历（traversal）** 从根结点开始，并按照某个顺序访问树的各个结点
+
+5. **翻译方案**
+
+   语法制导翻译方案是一种在文法产生式中附加一些程序片段来描述结果的表示方法。语法制导翻译方案和语法制导定义相似，只是显示指定了语义规则的计算顺序
+
+   被嵌入到产生式体中的程序片段称为 **语义动作（semantic action）**。一个语义动作用花括号括起来，并写入产生式的体中，它的执行位置也由此指定，如下：
+
+   *rest* → + *term* | print('+') | *rest*<sub>1</sub>
+   
