--- a/Notes/编译原理/《编译原理》笔记.md
+++ b/Notes/编译原理/《编译原理》笔记.md
@@ -335,3 +335,11 @@
 
    *rest* → + *term* | print('+') | *rest*<sub>1</sub>
    
+### 2.4 语法分析
+
+语法分析是决定如何使用一个文法生成一个终结符号串的过程
+
+大多数语法分析方法都可以归入以下两类：**自顶向下（top-down）** 方法和 **自底向上（bottom-up）** 方法。这两个术语指的是语法分析树结点的 **构造顺序**
+
+1. **自顶向下分析方法**
+
